feat: Enhance language settings and update translations for improved user experience

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -206,6 +206,32 @@
     "distance": "المسافة",
     "reviews": "التقييمات"
   },
+  "settings": {
+    "title": "الإعدادات",
+    "loading": "جاري تحميل الإعدادات...",
+    "saving": "جاري الحفظ...",
+    "error_title": "خطأ",
+    "retry": "إعادة المحاولة",
+    "enabled": "مفعل",
+    "disabled": "معطل",
+    "resetting": "جاري إعادة التعيين...",
+    "reset_to_defaults": "إعادة تعيين إلى الافتراضي",
+    "export_settings": "تصدير الإعدادات",
+    "calculation": "حساب الصلاة",
+    "calculation_desc": "طريقة الحساب والمذهب",
+    "notifications": "الإشعارات",
+    "notifications_desc": "إشعارات أوقات الصلاة",
+    "display": "العرض",
+    "display_desc": "المظهر والشكل",
+    "language": "اللغة",
+    "language_desc": "لغة التطبيق",
+    "privacy": "الخصوصية",
+    "privacy_desc": "إعدادات البيانات والخصوصية",
+    "refresh": "تحديث البيانات",
+    "refresh_desc": "التحكم في تحديث البيانات",
+    "accessibility": "إمكانية الوصول",
+    "accessibility_desc": "خيارات إمكانية الوصول"
+  },
   "main_navigation": {
     "title": "التطبيق الإسلامي الشامل",
     "subtitle": "مجموعة من الأدوات الإسلامية المفيدة",
