--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -206,6 +206,32 @@
     "distance": "Distance",
     "reviews": "Reviews"
   },
+  "settings": {
+    "title": "Settings",
+    "loading": "Loading settings...",
+    "saving": "Saving...",
+    "error_title": "Error",
+    "retry": "Retry",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
+    "resetting": "Resetting...",
+    "reset_to_defaults": "Reset to Defaults",
+    "export_settings": "Export Settings",
+    "calculation": "Prayer Calculation",
+    "calculation_desc": "Calculation method and madhab",
+    "notifications": "Notifications",
+    "notifications_desc": "Prayer time notifications",
+    "display": "Display",
+    "display_desc": "Theme and appearance",
+    "language": "Language",
+    "language_desc": "App language",
+    "privacy": "Privacy",
+    "privacy_desc": "Data and privacy settings",
+    "refresh": "Data Refresh",
+    "refresh_desc": "Control when to refresh data",
+    "accessibility": "Accessibility",
+    "accessibility_desc": "Accessibility options"
+  },
   "main_navigation": {
     "title": "Comprehensive Islamic App",
     "subtitle": "A collection of useful Islamic tools",
