feat: Enhance translation support for calculation methods and madhabs, refactor related services

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -230,7 +230,66 @@
     "refresh": "تحديث البيانات",
     "refresh_desc": "التحكم في تحديث البيانات",
     "accessibility": "إمكانية الوصول",
-    "accessibility_desc": "خيارات إمكانية الوصول"
+    "accessibility_desc": "خيارات إمكانية الوصول",
+    "calculation_methods": {
+      "ISNA": {
+        "name": "الجمعية الإسلامية لشمال أمريكا",
+        "description": "مستخدم في أمريكا الشمالية",
+        "region": "أمريكا الشمالية"
+      },
+      "MWL": {
+        "name": "رابطة العالم الإسلامي",
+        "description": "مستخدم في أوروبا والشرق الأقصى وأجزاء من أمريكا",
+        "region": "أوروبا والشرق الأقصى"
+      },
+      "EGYPT": {
+        "name": "الهيئة العامة المصرية للمساحة",
+        "description": "مستخدم في أفريقيا وسوريا ولبنان وماليزيا",
+        "region": "أفريقيا والشرق الأوسط"
+      },
+      "MAKKAH": {
+        "name": "جامعة أم القرى",
+        "description": "مستخدم في المملكة العربية السعودية",
+        "region": "المملكة العربية السعودية"
+      },
+      "KARACHI": {
+        "name": "جامعة العلوم الإسلامية، كراتشي",
+        "description": "مستخدم في باكستان وبنغلاديش والهند",
+        "region": "جنوب آسيا"
+      },
+      "TEHRAN": {
+        "name": "معهد الجيوفيزياء، جامعة طهران",
+        "description": "مستخدم في إيران وبعض المجتمعات الشيعية",
+        "region": "إيران"
+      },
+      "JAFARI": {
+        "name": "الشيعة الإثنا عشرية (الجعفرية)",
+        "description": "مستخدم من قبل المسلمين الشيعة",
+        "region": "المجتمعات الشيعية"
+      }
+    },
+    "madhabs": {
+      "HANAFI": {
+        "name": "الحنفي",
+        "description": "صلاة العصر عندما يساوي الظل طول الجسم مضافاً إليه الظل الأصلي",
+        "asr_calculation": "الظل = الجسم + الظل الأصلي"
+      },
+      "SHAFI": {
+        "name": "الشافعي",
+        "description": "صلاة العصر عندما يساوي الظل طول الجسم",
+        "asr_calculation": "الظل = طول الجسم"
+      },
+      "MALIKI": {
+        "name": "المالكي",
+        "description": "صلاة العصر عندما يساوي الظل طول الجسم",
+        "asr_calculation": "الظل = طول الجسم"
+      },
+      "HANBALI": {
+        "name": "الحنبلي",
+        "description": "صلاة العصر عندما يساوي الظل طول الجسم",
+        "asr_calculation": "الظل = طول الجسم"
+      }
+    }
   },
   "main_navigation": {
     "title": "التطبيق الإسلامي الشامل",
