feat: Refactor QiblaCompass component to utilize user preferences for location and integrate manual location input and permission modal
refactor: Update imports in sahw-assistant components to use shared Header

refactor: Update imports in settings components to use shared services and types

fix: Adjust imports in shared components for consistency

test: Update tests for CalendarEventCard, MosqueCard, and MosqueFinderScreen to reflect new component paths

test: Enhance QiblaCompass integration tests with mock services and translations

test: Improve userPreferencesStore tests for better coverage and consistency

chore: Mock Capacitor APIs globally in test setup for consistent testing environment

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -6,7 +6,8 @@
       "retry": "إعادة المحاولة",
       "reset": "إعادة تعيين",
       "settings": "الإعدادات",
-      "history": "التاريخ"
+      "history": "التاريخ",
+      "change": "تغيير"
     },
     "status": {
       "loading": "جاري التحميل...",
