feat: Refactor location components to use custom translation hook and enhance UI elements

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -186,8 +186,10 @@
     "title": "المساجد القريبة",
     "search": "بحث",
     "searchMosques": "البحث عن المساجد...",
+    "filters": "المرشحات",
     "searchFilters": "مرشحات البحث",
     "searchRadius": "نطاق البحث",
+    "radius": "النطاق",
     "applyFilters": "تطبيق المرشحات",
     "adjustSearch": "تعديل البحث",
     "noMosquesFound": "لا توجد مساجد في منطقتك",
