--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -186,8 +186,10 @@
     "title": "Nearby Mosques",
     "search": "Search",
     "searchMosques": "Search mosques...",
+    "filters": "Filters",
     "searchFilters": "Search Filters",
     "searchRadius": "Search Radius",
+    "radius": "Radius",
     "applyFilters": "Apply Filters",
     "adjustSearch": "Adjust Search",
     "noMosquesFound": "No mosques found in your area",
