feat: Implement current location retrieval with reverse geocoding and enhance location error handling

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -192,6 +192,14 @@
     "radius": "النطاق",
     "applyFilters": "تطبيق المرشحات",
     "adjustSearch": "تعديل البحث",
+    "getCurrentLocation": "الحصول على الموقع الحالي",
+    "updatingLocation": "جاري تحديث موقعك...",
+    "locationUpdated": "تم تحديث الموقع بنجاح!",
+    "noLocationSet": "لم يتم تعيين الموقع. يرجى تعيين موقعك للعثور على المساجد القريبة.",
+    "setManually": "تعيين يدوياً",
+    "locationPermissionDenied": "تم رفض إذن الموقع. يرجى تفعيل الوصول للموقع في إعدادات المتصفح.",
+    "locationUnavailable": "معلومات الموقع غير متاحة. يرجى التحقق من GPS أو المحاولة تعيين الموقع يدوياً.",
+    "locationTimeout": "انتهت مهلة طلب الموقع. يرجى المحاولة مرة أخرى أو تعيين الموقع يدوياً.",
     "noMosquesFound": "لا توجد مساجد في منطقتك",
     "locationError": "فشل في الحصول على الموقع",
     "mosqueSearchError": "فشل في البحث عن المساجد",
