--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -192,6 +192,14 @@
     "radius": "Radius",
     "applyFilters": "Apply Filters",
     "adjustSearch": "Adjust Search",
+    "getCurrentLocation": "Get Current Location",
+    "updatingLocation": "Updating your location...",
+    "locationUpdated": "Location updated successfully!",
+    "noLocationSet": "Location not set. Please set your location to find nearby mosques.",
+    "setManually": "Set Manually",
+    "locationPermissionDenied": "Location permission denied. Please enable location access in your browser settings.",
+    "locationUnavailable": "Location information is unavailable. Please check your GPS or try setting location manually.",
+    "locationTimeout": "Location request timed out. Please try again or set location manually.",
     "noMosquesFound": "No mosques found in your area",
     "locationError": "Failed to get location",
     "mosqueSearchError": "Failed to search mosques",
