feat: Update location handling by integrating LocationSelector component and enhancing user experience with improved error handling and UI updates

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -80,7 +80,8 @@
     },
     "buttons": {
       "manual_location": "إدخال الموقع يدوياً",
-      "set_location": "تحديد الموقع"
+      "set_location": "تحديد الموقع",
+      "get_current": "الحصول على الموقع الحالي"
     },
     "manual": {
       "title": "تحديد موقعك",
@@ -107,6 +108,7 @@
     "status": {
       "loading": "جاري الحصول على الموقع...",
       "not_set": "لم يتم تحديد الموقع",
+      "updated": "تم تحديث الموقع بنجاح!",
       "gps": "موقع GPS",
       "manual": "موقع يدوي",
       "unknown": "موقع غير معروف",
