feat: Add manual Qibla compass mode and user preferences integration
- Implemented updateQiblaPreferences method in userPreferencesStore to handle manual compass settings.
- Extended ComprehensiveUserPreferences interface to include qibla settings.
- Created design and requirements documents for the manual Qibla compass feature.
- Developed CompassModeToggle and ManualCompass components for user interaction.
- Enhanced QiblaService with methods for static Qibla direction calculation and automatic mode support detection.
- Added comprehensive unit and integration tests for QiblaService functionality and preferences.
- Implemented SimpleLocationInput component for user location input with map integration.
- Created test scripts to verify the implementation of Qibla preferences and their functionality.

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -141,7 +141,10 @@
       "instructions": "حرك جهازك في شكل رقم 8 لمعايرة البوصلة",
       "not_supported": "البوصلة غير مدعومة في هذا الجهاز"
     },
-    "location_required": "الموقع مطلوب لتحديد اتجاه القبلة"
+    "location_required": "الموقع مطلوب لتحديد اتجاه القبلة",
+    "error_title": "خطأ",
+    "retry": "إعادة المحاولة",
+    "change": "تغيير"
   },
   "tasbih": {
     "title": "التسبيح",
