feat: Enhance QiblaCompass localization by refining translation keys and updating loading messages

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -134,7 +134,7 @@
   "qibla": {
     "title": "اتجاه القبلة",
     "loading": "جاري تحديد اتجاه القبلة...",
-    "direction": "اتجاه القبلة",
+    "direction": "القبلة هي الاتجاه الذي يتوجه إليه المسلمون أثناء الصلاة نحو الكعبة في مكة. استخدم هذه البوصلة لإيجاد الاتجاه الصحيح.",
     "distance_to_kaaba": "المسافة إلى الكعبة",
     "compass": {
       "calibration": "معايرة البوصلة",
