feat: Enhance QiblaCompass localization and improve user instructions
- Updated translation keys for manual orientation modes and status messages in both English and Arabic.
- Improved user instructions for manual compass mode, providing clearer guidance based on the current orientation.
- Enhanced UI elements to reflect localized text for better user experience.

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -139,7 +139,44 @@
     "compass": {
       "calibration": "معايرة البوصلة",
       "instructions": "حرك جهازك في شكل رقم 8 لمعايرة البوصلة",
-      "not_supported": "البوصلة غير مدعومة في هذا الجهاز"
+      "not_supported": "البوصلة غير مدعومة في هذا الجهاز",
+      "modes": {
+        "automatic": "تلقائي",
+        "manual": "يدوي"
+      },
+      "status": {
+        "manual_north_up": "الوضع اليدوي - القبلة على {{degrees}}° من الشمال",
+        "manual_qibla_up": "الوضع اليدوي - اتجاه القبلة لأعلى",
+        "aligned": "متوجه نحو القبلة",
+        "aligning": "جاري المحاذاة...",
+        "device_unavailable": "اتجاه الجهاز غير متاح. استخدام وضع البوصلة اليدوي.",
+        "face_needle": "توجه في اتجاه السهم الأخضر (أعلى البوصلة)"
+      },
+      "orientation_modes": {
+        "north_up": {
+          "description": "استخدام وضع البوصلة اليدوي. السهم يشير إلى اتجاه القبلة من الشمال.",
+          "instructions": [
+            "اعثر على الشمال باستخدام بوصلة حقيقية أو تطبيق بوصلة",
+            "وجه جهازك نحو الشمال",
+            "السهم يشير إلى اتجاه القبلة ({{degrees}}° من الشمال)",
+            "استدر نحو الاتجاه الذي يشير إليه السهم",
+            "استخدم زر التبديل (🕋/ش) للتنقل بين أوضاع التوجيه"
+          ]
+        },
+        "qibla_up": {
+          "description": "استخدام وضع القبلة لأعلى. البوصلة موجهة مع القبلة في الأعلى.",
+          "instructions": [
+            "السهم الأخضر يشير مباشرة لأعلى (نحو القبلة)",
+            "ببساطة توجه في اتجاه السهم الأخضر",
+            "استخدم زر التبديل (🕋/ش) للتنقل بين أوضاع التوجيه"
+          ]
+        }
+      },
+      "manual_mode_title": "وضع البوصلة اليدوي",
+      "toggle_hints": {
+        "to_qibla_up": "التبديل إلى وضع القبلة لأعلى",
+        "to_north_up": "التبديل إلى وضع الشمال لأعلى"
+      }
     },
     "location_required": "الموقع مطلوب لتحديد اتجاه القبلة",
     "error_title": "خطأ",
