Add multi-language support, enhanced mosque data, and caching functionality
- Updated Arabic and English localization files to include new strings for cached results, refresh options, contact info, and special events.
- Enhanced MosqueService to support caching of mosque search results and added methods for searching mosques using Google Places and OpenStreetMap APIs.
- Introduced OfflineStorageService for caching mosque data with expiration and validation checks.
- Added a new RadiusSelector component for user-friendly radius selection in mosque searches.
- Created a comprehensive Mosque API Configuration Guide for setting up and using the mosque finder functionality.

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -257,7 +257,15 @@
     "openingHours": "ساعات العمل",
     "facilities": "المرافق",
     "distance": "المسافة",
-    "reviews": "التقييمات"
+    "reviews": "التقييمات",
+    "showingCachedResults": "عرض النتائج المحفوظة",
+    "refresh": "تحديث",
+    "refreshResults": "تحديث النتائج",
+    "contactAvailable": "معلومات الاتصال متاحة",
+    "contactInfo": "معلومات الاتصال",
+    "specialEvents": "البرامج والفعاليات",
+    "fullAddress": "العنوان الكامل",
+    "opening": "جاري الفتح..."
   },
   "settings": {
     "title": "الإعدادات",
